login and signup completed

--- a/templates/register.html
+++ b/templates/register.html
@@ -21,6 +21,9 @@
         <label for="password2">Confirm Password:</label>
         <input type="password" id="password2" name="password2" required>
 
+        <label for="location">location:</label>
+        <input type="location" id="location" name="location" required>
+
         <button type="submit">Register</button>
     </form>
     <p>Already have an account? <a href="{% url 'login' %}">Login here</a>.</p>
